<resources>
    <string name="app_name">Pixtanta</string>
    <string name="smartLg">Click on your display photo to login your account, instead of using your email (or username) and password</string>
    <string name="passTxt">It\'s advisable to use a very strong password that you aren\'t using elsewhere</string>
    <string name="devAcc">Deactivating your account will disable your profile and remove your name and photo from most things you\'ve shared on Pixtanta. Some information may still be visible to others, such as your name in the messages you sent.\n\n Your Account will be activated again whenever You log in.</string>
    <string name="permReq">You need to grant all required permissions to use Pixtanta\n\n Do you want to grant permission?</string>
    <string name="allow_others_mention_you_in_their_posts_and_comments">Allow others mention you in their posts and comments</string>
    <string name="yes">Yes</string>
    <string name="who_can_comment_on_your_posts">Who can comment on Your posts?</string>
    <string name="everyone">Everyone</string>
    <string name="first_name">First Name</string>
    <string name="search_for_a_user_to_block">Search for a user to block…</string>
    <string name="search_for_a_friend_to_block">Search for a friend to block</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="blocked_messages">Blocked Messages</string>
    <string name="unblock">Unblock</string>
    <string name="activity_log">Activity Log</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete_this_comment">Are You Sure You Want To Delete This Comment?</string>
    <string name="comment">Comment…</string>
    <string name="comments">Comments</string>
    <string name="select_your_page_category">Select Your Page Category</string>
    <string name="deleted_posts">Deleted Posts</string>
    <string name="save">SAVE</string>
    <string name="discard">Discard</string>
    <string name="are_you_sure_you_want_to_discard_this_editing">Are You Sure You Want To Discard This Editing?</string>
    <string name="make_a_post">Make a Post…</string>
    <string name="add_photos_videos">Add Photos|Videos</string>
    <string name="reply">Reply…</string>
    <string name="search">Search…</string>
    <string name="hidden_posts">Hidden Posts</string>
    <string name="logging_out">Logging Out</string>
    <string name="see_all_results">See All Results</string>
    <string name="post">POST</string>
    <string name="select">Select</string>
    <string name="no">No</string>
    <string name="do_you_want_to_discard_your_selections">Do you want to discard your selections?</string>
    <string name="messages">Messages</string>
    <string name="logging_in">Logging In</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email_or_username">Email or Username</string>
    <string name="manage_your_pages">Manage Your Pages</string>
    <string name="you_can_no_longer_chat_with_this_user">You can no longer chat with this user</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="type_a_message">Type a message…</string>
    <string name="edit_info">Edit Info</string>
    <string name="follow">Follow</string>
    <string name="saving">Saving…</string>
    <string name="description">Description</string>
    <string name="website">Website</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="page_category">Page Category</string>
    <string name="page_name">Page Name</string>
    <string name="do_you_want_to_discard_photo_editor">Do you want to discard photo editor?</string>
    <string name="save_edit">Save Edit</string>
    <string name="done">Done</string>
    <string name="add_friend">Add Friend</string>
    <string name="replies">Replies</string>
    <string name="are_you_sure_you_want_to_delete_this_reply">Are You Sure You Want To Delete This Reply?</string>
    <string name="shake_phone_to_report_a_problem">Shake phone to report a problem</string>
    <string name="send_report">Send Report</string>
    <string name="what_went_wrong">What went wrong?</string>
    <string name="continue_to_report_a_problem">Continue to Report a Problem</string>
    <string name="you_can_help_us_fix_a_problem_faster_whenever_you_see_a_problem_just_shake_your_phone">You can help us fix a problem faster. Whenever you see a problem, just shake your phone</string>
    <string name="go_back_to_where_you_found_a_problem_and_shake_your_phone">Go Back to Where You Found a Problem and Shake Your Phone</string>
    <string name="saved_posts">Saved Posts</string>
    <string name="type_your_password_after_clicking_your_display_photo">Type your password after clicking your display photo</string>
    <string name="login_by_clicking_your_display_photo">Login by clicking your display photo</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="deactivate">Deactivate</string>
    <string name="edit">Edit</string>
    <string name="last_name">Last Name</string>
    <string name="setup_page_details">Setup Page Details</string>
    <string name="creating_page">Creating Page</string>
    <string name="create_page">Create Page</string>
    <string name="creating_account">Creating Account</string>
    <string name="other">Other</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login_to_another_account">Login to another Account</string>
    <string name="smart_login">Smart Login</string>
    <string name="tags">Tags</string>
    <string name="terms_and_policies">Terms and Policies</string>
    <string name="do_you_want_to_discard_video_editor">Do you want to discard video editor?</string>
    <string name="delete_for_all">Delete For All</string>
    <string name="delete_for_me">Delete For Me</string>
    <string name="are_you_sure_you_want_to_delete_this_message">Are You Sure You Want To Delete This Message?</string>
    <string name="no_information_to_display">No Information to Display</string>
    <string name="add_text">Add Text</string>
    <string name="enter_text">Enter text…</string>
    <string name="insert_image">Insert Image</string>
    <string name="brush">Brush</string>
    <string name="eraser">Eraser</string>
    <string name="opacity">Opacity</string>
    <string name="size">Size</string>
    <string name="crop_image">Crop Image</string>
    <string name="brightness">BRIGHTNESS</string>
    <string name="saturation">SATURATION</string>
    <string name="constraint">CONSTRAINT</string>
    <string name="no_chat_in_the_archive">No Chat in the Archive</string>
    <string name="no_chat_in_the_favourites">No Chat in the Favourites</string>
    <string name="no_photo_uploaded">No Photo Uploaded</string>
    <string name="no_video_uploaded">No Video Uploaded</string>
    <string name="rotate_image_to_left">Rotate Image to Left</string>
    <string name="rotate_image_to_right">Rotate Image to Right</string>
    <string name="see_all">See All</string>
    <string name="create_new_page">Create New Page</string>
    <string name="you_have_no_active_page">You have no active page</string>
    <string name="view_all_reactions">View all reactions</string>
    <string name="_0">0%</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="manage_account">Manage Account</string>
    <string name="name">Name</string>
    <string name="enable_push_notification">Enable Push Notification</string>
    <string name="enable_notification_sound">Enable Notification Sound</string>
    <string name="only_your_friends_and_followers">Only your friends and followers</string>
    <string name="who_can_reply_to_your_comments_on_posts">Who can reply to Your comments on posts?</string>
    <string name="most_relevant">Most Relevant</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="sort_comments_and_replies_by">Sort Comments and Replies By</string>
    <string name="see_post_from_your_followers">See Post from your Followers</string>
    <string name="do_you_want_search_engine_outside_pixtanta_to_link_to_your_profile">Do you want search engine outside Pixtanta to link to your profile?</string>
    <string name="permit_everyone_to_see_those_whom_you_follow">Permit Everyone to see those whom you follow</string>
    <string name="permit_everyone_to_see_those_who_follow_you">Permit Everyone to see those who follow you</string>
    <string name="permit_everyone_to_see_your_friend_list">Permit Everyone to see your friend list</string>
    <string name="request_for_your_permission_to_accept_a_follower">Request for your permission to accept a follower</string>
    <string name="restrict_your_profile_to_only_your_friends_followers_and_those_you_follow">Restrict your profile to only your friends, followers and those you follow</string>
    <string name="login_with_your_display_photo_smart_login">Login with your display photo (Smart Login)</string>
    <string name="change_password">Change Password</string>
    <string name="no_active_friends">No Active Friends</string>
    <string name="filter_name">FILTER NAME</string>
    <string name="submit_code">Submit Code</string>
    <string name="get_code">Get Code</string>
    <string name="_continue">Continue</string>
    <string name="code">Code</string>
    <string name="ok">OK</string>
    <string name="searching_for_user">Searching User</string>
    <string name="validating_password">Validating Password</string>
    <string name="discard_forget_password">Are you sure you want to leave this page?</string>
    <string name="validating_code">Validating Code</string>
    <string name="this_is_not_my_account">This is not my account</string>
    <string name="sending_code">Sending Code</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="select_a_theme">Select a Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="saving_theme">Saving Theme…</string>
    <string name="swipe_to_cancel">Swipe to Cancel>>></string>
    <string name="todo">TODO</string>
</resources>
