<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_horizontal"
    tools:context=".AddTextFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="200dp"
		android:textColorHint="?attr/blash"
        android:background="@drawable/border_bottom"
        android:id="@+id/addText"
        android:scrollbars="vertical"
        android:hint="@string/enter_text"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/colorPalette"
        android:src="@drawable/color_palette"
        android:layout_marginHorizontal="5dp"
        android:adjustViewBounds="true"
        android:layout_marginVertical="20dp"
        android:contentDescription="@string/todo"
        android:layout_gravity="center_vertical"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryRed"
        android:text="@string/add_text"
        android:id="@+id/addBtn"
        android:textAllCaps="false"
		android:textStyle="bold"
        android:textColor="@color/white" />

</LinearLayout>