<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:gravity="center_vertical"
    android:clickable="true"
    android:focusable="true"
    android:layout_gravity="center"
    android:background="@drawable/border_rad"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:duplicateParentState="true"
        android:layout_height="wrap_content"
        android:textColor="?attr/black"
        android:id="@+id/txter"
        android:textAlignment="center"
        android:text="@string/are_you_sure_you_want_to_delete_this_message"
        android:textSize="17sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:duplicateParentState="true"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:layout_marginHorizontal="10dp"
            android:textColor="?attr/blash"
            android:textSize="16sp"
            android:text="@string/cancel"
            android:clickable="true"
            android:id="@+id/cancel"
            android:focusable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:layout_marginHorizontal="10dp"
            android:textColor="?attr/icon_pri_red"
            android:textSize="16sp"
            android:text="@string/delete_for_me"
            android:clickable="true"
            android:id="@+id/deleteForMe"
            android:focusable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:padding="7dp"
            android:layout_marginHorizontal="10dp"
            android:textColor="?attr/icon_pri_red"
            android:textSize="16sp"
            android:text="@string/delete_for_all"
            android:clickable="true"
            android:id="@+id/deleteForAll"
            android:focusable="true" />

    </LinearLayout>

</LinearLayout>